3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

plugins/cfpython/cfpython_object.c: don't try to insert a NULL object.
Nicolas Weeger 2007-07-16

Remove "random_move" field, "random_movement" exists.
 common/loader.l
 utils/bwp.c
Nicolas Weeger 2007-07-16

Remove obsolete/unused things.
 common/glue.c item.c map.c utils.c
 include/define.h
 plugins/cfpython/cfpython.c
 socket/request.c
Nicolas Weeger 2007-07-15

Remove unused field.
 include/newserver.h
 socket/init.c request.c
Nicolas Weeger 2007-07-15

Fix spoilers generation. giftrans is now disabled.
 doc/playbook/Makefile.am
 doc/playbook-html/Makefile.am
 doc/scripts/Makefile.in makeps.pl
 doc/spoiler/Makefile.am
 doc/spoiler-html/Makefile.am
 doc/spoiler-html/spoiler.html: removed as it's generated by make archive
Nicolas Weeger 2007-07-15

server/skills.c: Fix crash - using incorrect map pointer in call
  to get_map_ob
MSW 2007-07-11

Tentative fix for bug #1746208: Critical crash with 'printlos'.
 common/los.c: use safe string functions. Use 0/100 for view instead of 0-100.
Nicolas Weeger 2007-07-11

socket/request.c: In map sending routine, use object anim_speed if so for
  animation speed instead of object speed.  Allows for zero speed objects
  to be animated, also matches behavior for inventory items.
MSW 2007-07-09

Documentation, no functional change.
 common/object.c
 server/rune.c
Nicolas Weeger 2007-07-09

Remove superfluous calls to esrv_del_item (since remove_ob calls it if needed).
Remove now unused send_removed_object function. Change esrv_send_item to esrv_update_item.
 common/item.c
 server/c_object.c c_wiz.c gods.c player.c plugins.c shop.c skills.c spell_effect.c time.c